--- a/mobile/app.json
+++ b/mobile/app.json
@@ -35,7 +35,8 @@
           "requestLocationPermission": true,
           "locationPermission": "Allow $(PRODUCT_NAME) to use your location"
         }
-      ]
+      ],
+      "expo-secure-store"
     ]
   }
 }
