--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,7 +19,9 @@
     "expo": "~54.0.27",
     "expo-dev-client": "~6.0.20",
     "expo-maps": "~0.12.9",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
+    "pocketbase": "^0.26.5",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
