--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,8 @@
     "expo": "~54.0.27",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
+    "expo-image": "~3.0.11",
+    "expo-location": "~19.0.8",
     "expo-maps": "~0.12.9",
     "expo-network": "~8.0.8",
     "expo-secure-store": "~15.0.8",
@@ -26,9 +28,12 @@
     "pocketbase": "^0.26.5",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1"
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
