--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,22 +1,26 @@
-name: Build And Push Docker Image
+name: Publish Docker Image
 
 on:
   release:
     types: [created]
 
 jobs:
-  build:
+  publish:
+    name: Publish
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Log in to GitHub Container Registry
+    - name: Log in to GHCR
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-    - name: Build and push Docker image
+    - name: Build Docker Image
       run: |
         docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.ref_name }} \
           -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest .
+
+    - name: Push Docker Image
+      run: |
         docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.ref_name }}
         docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
