--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,5 +22,5 @@ jobs:
 
     - name: Push Docker Image
       run: |
-        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.ref_name }}
-        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
+        docker push ghcr.io/${{ github.actor }}/${{ github.repository }}:${{ github.ref_name }}
+        docker push ghcr.io/${{ github.actor }}/${{ github.repository }}:latest
