--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.ref_name }} \
+        docker build -t ghcr.io/${{ github.actor }}/${{ github.repository }}:${{ github.ref_name }} \
           -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest .
 
     - name: Push Docker Image
