--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t ghcr.io/${{ github.actor }}/${{ github.repository }}:${{ github.ref_name }} \
-          -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest .
+          -t ghcr.io/${{ github.actor }}/${{ github.repository }}:latest .
 
     - name: Push Docker Image
       run: |
