--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,22 +1,29 @@
-name: Build And Push Docker Image
+name: Publish Docker Image
 
 on:
   release:
     types: [created]
 
 jobs:
-  build:
+  publish:
+    name: Publish
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v6
 
-    - name: Log in to GitHub Container Registry
+    - name: Log in to GHCR
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-    - name: Build and push Docker image
+    - name: Build Docker Image
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.ref_name }} \
-          -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest .
-        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.ref_name }}
-        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
+        docker build -t ghcr.io/${{ github.repository }}:${{ github.ref_name }} \
+          -t ghcr.io/${{ github.repository }}:latest .
+
+    - name: Push Docker Image
+      run: |
+        docker push ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+        docker push ghcr.io/${{ github.repository }}:latest
