--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.10",
     "expo-location": "~19.0.8",
     "expo-maps": "~0.12.9",
     "expo-network": "~8.0.8",
