--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.8.6",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "babel-plugin-inline-import": "^3.0.0",
     "expo": "~54.0.31",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
@@ -26,6 +27,8 @@
     "expo-maps": "~0.12.10",
     "expo-network": "~8.0.8",
     "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "pocketbase": "^0.26.5",
     "react": "19.1.0",
