--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,9 +18,10 @@
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "babel-plugin-inline-import": "^3.0.0",
-    "expo": "~54.0.31",
+    "expo": "~54.0.33",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
+    "expo-file-system": "~19.0.21",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-location": "~19.0.8",
@@ -34,6 +35,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-logs": "^5.5.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
