--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,20 +17,25 @@
     "@react-navigation/native-stack": "^7.8.6",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
-    "expo": "~54.0.31",
+    "babel-plugin-inline-import": "^3.0.0",
+    "expo": "~54.0.33",
     "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.20",
+    "expo-file-system": "~19.0.21",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-location": "~19.0.8",
     "expo-maps": "~0.12.10",
     "expo-network": "~8.0.8",
     "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "pocketbase": "^0.26.5",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-logs": "^5.5.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
