--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,6 +31,7 @@
     "expo-splash-screen": "~31.0.13",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
+    "expo-task-manager": "~14.0.9",
     "pocketbase": "^0.26.5",
     "react": "19.1.0",
     "react-native": "0.81.5",
