--- a/.github/workflows/release-docker.yaml
+++ b/.github/workflows/release-docker.yaml
@@ -5,6 +5,9 @@ on:
   release:
     types: [created]
 
+env:
+  IMAGE: ghcr.io/${{ github.repository }}
+
 jobs:
   release:
     name: Release
@@ -16,15 +19,30 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v6
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Log in to GHCR
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build Docker image
-      run: |
-        docker build -t ghcr.io/${{ github.repository }}:${{ github.ref_name }} \
-          -t ghcr.io/${{ github.repository }}:latest .
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.IMAGE }}
+        tags: |
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=raw,value=latest,enable={{is_default_branch}}
 
-    - name: Push Docker image
-      run: |
-        docker push ghcr.io/${{ github.repository }}:${{ github.ref_name }}
-        docker push ghcr.io/${{ github.repository }}:latest
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
